<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Offer助手</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="company_hint">公司名称</string>
    <string name="new_note">New Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="save_note">Save Note</string>
    <string name="company_name_label">公司</string>
    <string name="time_label">时间</string>
    <string name="place_label">地点</string>
    <string name="note_alarm_label">提醒</string>
    <string name="dialog_date_title">时间</string>
    <string name="dialog_date_confirm">确定</string>
    <string name="dialog_date_cancel">取消</string>

</resources>
